@@ -5,6 +5,7 @@
 - added `rotateZ-90` et `rotateZ-270` helpers
 - added Sass variables for `max-width` in percentages
 - added helper `flex-row`
+- added modifier `pm-modal--wider` for… wider modals.
 
 
 # [1.6.16] - 2019-06-19
